--- a/src/components/routedata/routeData.css
+++ b/src/components/routedata/routeData.css
@@ -6,8 +6,31 @@
     box-shadow: 0px 0px 20px rgb(0,0,0,0.3);
     border-radius: 20px;
     transition: transform 1s;
+    max-width: 1024px;
+    overflow: hidden;
 }
 
 .RouteDataViewWrapper.active {
     transform: translateY(30%);
+}
+
+.RouteDataViewWrapper header {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    border-bottom: 1px solid #d3d3d3;
+    background-color: #E2E2E2;
+}
+
+.RouteDataViewWrapper header button:hover {
+    background-color: #d3d3d3;
+}
+
+.RouteDataViewWrapper header button.active {
+    background-color: #d3d3d3;
+}
+
+.RouteDataViewWrapper #main {
+    width: 100%;
+    height: 90%;
 }
