command 명령어 추가

--- a/src/components/routedata/rawDataview.css
+++ b/src/components/routedata/rawDataview.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     background-color: #4A4F5A;
     -ms-overflow-style: none;
+    display: flex;
+    flex-direction: column;
 }
 
 #RawDataViewWrapper::-webkit-scrollbar{
