--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,5 +1,8 @@
+.SearchWrapper {
+    transition: 1s;
+}
+
 .SearchWrapper.active {
     width: 350px;
     transform: translate(70px,-127px);
-    transition: 1s;
 }
