--- a/src/components/routedata/routeData.css
+++ b/src/components/routedata/routeData.css
@@ -20,13 +20,20 @@
     display: flex;
     border-bottom: 1px solid #d3d3d3;
     background-color: #E2E2E2;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.RouteDataViewWrapper header button:hover {
+.RouteDataViewWrapper header .button-group {
+    height: 100%;
+    display: flex;
+}
+
+.RouteDataViewWrapper header .button-group button:hover {
     background-color: #d3d3d3;
 }
 
-.RouteDataViewWrapper header button.active {
+.RouteDataViewWrapper header .button-group button.active {
     background-color: #d3d3d3;
 }
 
