--- a/src/components/routedata/routeData.css
+++ b/src/components/routedata/routeData.css
@@ -1,43 +1,43 @@
 .RouteDataViewWrapper {
-    position: fixed;
-    width: 80%;
-    height: 60%;
-    transform: translateY(100vh);
-    box-shadow: 0px 0px 20px rgb(0,0,0,0.3);
-    border-radius: 20px;
-    transition: transform 1s;
-    max-width: 1024px;
-    overflow: hidden;
+  position: fixed;
+  width: 80%;
+  height: 60%;
+  transform: translateY(100vh);
+  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.3);
+  border-radius: 20px;
+  transition: transform 1s;
+  max-width: 1024px;
+  overflow: hidden;
 }
 
 .RouteDataViewWrapper.active {
-    transform: translateY(30%);
+  transform: translateY(30%);
 }
 
 .RouteDataViewWrapper header {
-    width: 100%;
-    height: 10%;
-    display: flex;
-    border-bottom: 1px solid #d3d3d3;
-    background-color: #E2E2E2;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  height: 10%;
+  display: flex;
+  border-bottom: 1px solid #d3d3d3;
+  background-color: #e2e2e2;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .RouteDataViewWrapper header .group {
-    height: 100%;
-    display: flex;
+  height: 100%;
+  display: flex;
 }
 
 .RouteDataViewWrapper header .group button:hover {
-    background-color: #d3d3d3;
+  background-color: #d3d3d3;
 }
 
 .RouteDataViewWrapper header .group button.active {
-    background-color: #d3d3d3;
+  background-color: #d3d3d3;
 }
 
 .RouteDataViewWrapper #main {
-    width: 100%;
-    height: 90%;
+  width: 100%;
+  height: 90%;
 }
