--- a/front/src/components/TerminalView/TerminalView.module.scss
+++ b/front/src/components/TerminalView/TerminalView.module.scss
@@ -1,4 +1,4 @@
-#RawDataViewWrapper {
+.TerminalView {
   width: 100%;
   height: 100%;
   overflow-y: auto;
@@ -8,8 +8,8 @@
   -ms-overflow-style: none;
   display: flex;
   flex-direction: column;
-}
 
-#RawDataViewWrapper::-webkit-scrollbar {
-  display: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
