feat(front): option button proto

--- a/front/src/components/AppSideBar/AppSideBar.module.scss
+++ b/front/src/components/AppSideBar/AppSideBar.module.scss
@@ -1,14 +1,13 @@
 .SideNavigation {
 
-  transition: 1s;
+  transition: 300ms;
+  background-color: white;
 
   &--open {
     width: 240px;
-    height: 100vh;
   }
 
   &--close {
     width: 0px;
-    height: 100vh;
   }
 }
