--- a/front/src/components/OptionTerminal/OptionTerminal.module.scss
+++ b/front/src/components/OptionTerminal/OptionTerminal.module.scss
@@ -1,7 +1,11 @@
 .SideNavigation {
 
-  transition: 300ms;
   background-color: white;
+  position: fixed;
+  z-index: 10;
+
+  width: 300px;
+  height: 300px;
 
   &--open {
     width: 240px;
