--- a/front/src/components/OptionTerminal/OptionTerminal.module.scss
+++ b/front/src/components/OptionTerminal/OptionTerminal.module.scss
@@ -1,17 +1,40 @@
-.SideNavigation {
+$modal-width: 50%;
+$modal-height: 50%;
 
+.OptionTerminal {
   background-color: white;
   position: fixed;
   z-index: 10;
-
-  width: 300px;
-  height: 300px;
+  overflow: hidden;
+  transition: 500ms;
+  max-width: 1024px;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+  background-color: #4a4f5a;
 
   &--open {
-    width: 240px;
+    width: $modal-width;
+    height: $modal-height;
+    transition: none;
+  }
+
+  &--opening {
+    width: $modal-width;
+    height: $modal-height;
+    transition: 500ms;
+    left: 0px;
+    top: 0px
+  }
+
+  &--closing {
+    width: 0px;
+    height: calc(100vh - 60px);
+    transition: 500ms;
   }
 
   &--close {
     width: 0px;
+    height: calc(100vh - 60px);
   }
 }
