feat(front): option terminal scss 구현

--- a/front/src/components/OptionTerminal/OptionTerminal.module.scss
+++ b/front/src/components/OptionTerminal/OptionTerminal.module.scss
@@ -1,5 +1,5 @@
-$modal-width: 50%;
-$modal-height: 50%;
+$modal-width: 500px;
+$modal-height: 400px;
 
 .OptionTerminal {
   background-color: white;
