--- a/front/src/components/OptionTerminal/OptionTerminal.module.scss
+++ b/front/src/components/OptionTerminal/OptionTerminal.module.scss
@@ -23,18 +23,16 @@ $modal-height: 400px;
     width: $modal-width;
     height: $modal-height;
     transition: 500ms;
-    left: 0px;
-    top: 0px
   }
 
   &--closing {
     width: 0px;
-    height: calc(100vh - 60px);
+    height: 0px;
     transition: 500ms;
   }
 
   &--close {
     width: 0px;
-    height: calc(100vh - 60px);
+    height: 0px;
   }
 }
