chore(front): prettier 적용

--- a/front/src/components/DotOption/DotOption.module.scss
+++ b/front/src/components/DotOption/DotOption.module.scss
@@ -9,11 +9,11 @@
     height: 100%;
     flex: 1;
 
-    &__top, &__bottom {
+    &__top,
+    &__bottom {
       display: flex;
       flex: 1;
     }
-
   }
 
   &__right {
