--- a/front/src/components/OptionTerminalHeader/OptionTerminalHeader.module.scss
+++ b/front/src/components/OptionTerminalHeader/OptionTerminalHeader.module.scss
@@ -22,7 +22,8 @@
     font-size: 16px;
     color: #4a4f5a;
 
-    &--active, &:hover {
+    &--active,
+    &:hover {
       background-color: #d3d3d3;
     }
   }
@@ -36,4 +37,3 @@
     height: 100%;
   }
 }
-
