--- a/front/src/components/Toast/Toast.module.scss
+++ b/front/src/components/Toast/Toast.module.scss
@@ -2,30 +2,34 @@
   padding: 10px;
   position: fixed;
   margin: auto auto;
-  width: 300px;
   height: 30px;
   top: 75vh;
-  left: calc(50vw - 150px);
-  z-index: 999;
+  margin: auto 0px;
+  z-index: 1001;
   border-radius: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
   color: white;
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(20px);
+  left: 50%;
+  transform: translateX(-50%);
 
   &__background {
     position: absolute;
-    background-color: gray;
+    background-color: black;
     opacity: 0.3;
     width: 100%;
     height: 100%;
-    backdrop-filter: blur(50px);
   }
 
   &__text {
-    font-size: 24px;
+    font-size: 16px;
     z-index: 1;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
