fix(front: apiHealthView): css 수정

--- a/front/src/components/ApiHealthView/ApiHealthView.module.scss
+++ b/front/src/components/ApiHealthView/ApiHealthView.module.scss
@@ -1,8 +1,13 @@
 .ApiHealthView {
-  width: 105px;
+  width: 120px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  &__name {
+    font-weight: bold;
+    font-size: 10px;
+  }
 
   &__status {
     width: 16px;
