--- a/front/src/components/OptionTerminalBody/OptionTerminalBody.module.scss
+++ b/front/src/components/OptionTerminalBody/OptionTerminalBody.module.scss
@@ -1,7 +1,7 @@
 $padding-size: 20px;
 
 .OptionTerminalBody {
-  width: calc(100% - 2 * $padding-size);
+  width: calc(100% - 40px);
   height: 85%;
   padding: $padding-size;
   background-color: #4a4f5a;
